# Festation

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: flat_color.glsl.frag  flat_color.glsl.vert  texture.glsl.frag  texture.glsl.vert
src/: CMakeLists.txt  main.cpp  psx_system.cpp  psx_system.h  psx_system.hpp
src/cdrom/: cdrom.cpp  cdrom.hpp
src/cpu/: CMakeLists.txt  coprocessor_cp0_opcodes.cpp  coprocessor_cp0_opcodes.hpp  cpu_masks_types_utils.h  cpu_masks_types_utils.hpp  cpu_masks_utils.h  exceptions_handling.cpp  exceptions_handling.hpp  mips_r3000a_opcodes.cpp  mips_r3000a_opcodes.h  mips_r3000a_opcodes.hpp  mips_r3000a_state.h  mips_r300a_state.h  psx_cpu.cpp  psx_cpu.h  psx_cpu.hpp  psx_cpu_state.hpp  psx_cw33300_cpu.cpp  psx_cw33300_cpu.hpp
src/dma/: dma_channel.cpp  dma_channel.hpp  dma_control.cpp  dma_control.hpp
src/gpu/: gpu.cpp  gpu.hpp  gpu_commands.h  primitives_data.hpp
src/gpu/renderer/: framebuffer.cpp  framebuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/gpu/renderer/hw/OpenGL/: ogl_framebuffer.cpp  ogl_framebuffer.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp
src/interrupts/: interrupts.cpp  interrupts.hpp
src/kernel_bios/: CMakeLists.txt  bios.cpp  bios.hpp  tty.cpp  tty.hpp
src/memory/: CMakeLists.txt  memory_map_masks.h  memory_map_masks.hpp  virtual_mem_allocator_utils.cpp  virtual_mem_allocator_utils.h  virtual_mem_allocator_utils.hpp
src/utils/: file_reader.cpp  file_reader.hpp  logger.cpp  logger.hpp
